--- a/css/styles.css
+++ b/css/styles.css
@@ -576,6 +576,8 @@ img {
   margin-bottom: 8px;
 }
 .modal-label {
+  line-height: 1.17;
+
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16667;
@@ -623,6 +625,8 @@ img {
   margin-bottom: 16px;
 }
 .modal-textarea {
+  line-height: 1.17;
+
   width: 100%;
   height: 120px;
   border-radius: 4px;
